[metadata]
name = pyomu
version = 0.2.1
author = Sebastián Anapolsky
author_email = sanapolsky@gmail.com
description = Performs accessibility analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyomu
project_urls =
    Bug Tracker = https://github.com/pyomu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    geopandas==0.10 
    jupyterlab=2
    seaborn
    tzwhere
    unidecode
    osmnx
    h3
    mapclassify
    osmnet
    pandana
    contextily
    python-pptx
    mycolorpy
    tqdm
[options.packages.find]
where = src
