[metadata]
name = pyomu
version = 0.2.2
author = Sebastián Anapolsky
author_email = sanapolsky@gmail.com
description = Performs accessibility analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyomu
project_urls =
    Bug Tracker = https://github.com/pyomu
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =    
    contextily==1.4.0
    folium==0.14.0
    geopandas==0.14.0
    h3==3.7.6
    ipython==8.16.1
    jupyterlab==4.0.6
    libpysal==4.8.0
    mapclassify==2.6.1
    matplotlib-scalebar==0.8.1
    mycolorpy==1.5.1
    notebook==7.0.4
    numba==0.58.0
    numpy==1.25.2
    openpyxl==3.1.2
    pandas==2.1.1
    patsy==0.5.3
    Pillow==9.5.0
    plotly==5.17.0
    python-pptx==0.6.22
    PyYAML==6.0.1
    seaborn==0.13.0
    shapely==2.0.1
    tzwhere==3.0.3
    osmnet==0.1.7
    osmnx==1.8.0
    googlemaps==2.5.1
    pandana==0.7
    tqdm==4.65.0        
[options.packages.find]
where = src
